Separate slow-running DataSOirce-Proxy test case